fix spacing in footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -487,6 +487,7 @@ footer {
   font-size: 4rem; }
 
 .social-icons-container {
+  padding-top: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
